--- a/scss/header.scss
+++ b/scss/header.scss
@@ -8,7 +8,7 @@ header {
   width: 100%;
   background: white;
   left: 0;
-  z-index: 100;
+  z-index: 2000;
   @media (min-width: $mobile_width) {
     //    position: static;
   }
